# tdd_showcase

./: README.md  pyproject.toml
.github/actions/dependency-install/: action.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: ci.yml  merge.yml
scripts/: lint.sh  type_checks.sh  unit_test.sh
src/tdd_showcase/: showcase.py
tests/: test_initial.py
tests/unit/: test_chunking.py
